test2 fix of align

--- a/web_app/ezShop/src/pages/Catalog/Сatalog.module.scss
+++ b/web_app/ezShop/src/pages/Catalog/Сatalog.module.scss
@@ -59,6 +59,7 @@
     right: 0;
     left: 0;
     height: 62px;
+    line-height: 62px;
     background-color: $gray-color-2;
     text-align: center;
     align-content: center;
@@ -74,6 +75,7 @@
     right: 0;
     left: 0;
     height: 62px;
+    line-height: 62px;
     background-color: $accent-color;
     text-align: center;
     align-content: center;
